--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,108 +1,143 @@
+html, 
 body {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
+	height: 100%;
 }
 
 #background {
-    background: url("../images/bg.jpg");
+	background-color: #000;
+    background-image: url(../images/bg.jpg);
     background-position: center;
-    -webkit-background-size: cover;
     background-size: cover;
+    display: table;
     height: 100%;
     width: 100%;
-    display: table;
 }
 
 #loginContainer * {
-    color: #fff;
-    box-sizing: border-box;
+	color: #fff;
+	font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	font-weight: normal;
+	line-height: 1em;
+	box-sizing: border-box;
 }
 
 #loginContainer {
-    width: 80%;
-    margin: 0 auto;
-    position: relative;
-    max-width: 1024px;
+	width: 80%;
+	margin: 0 auto;
+	position: relative;
+	max-width: 1024px;
+}
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #fff;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #fff;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #fff;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #fff;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #fff;
 }
 
 #inputContainer {
     width: 400px;
-    padding: 3em;
-    border-right: 1px solid #fff;
+    padding: 45px;
     float: left;
+    border-right: 1px solid #999;
 }
 
 #inputContainer h2 {
-    text-align: center;
+	text-align: center;
 }
 
 #inputContainer input[type="text"],
 #inputContainer input[type="email"],
 #inputContainer input[type="password"] {
-    display: block;
-    background: transparent;
+	display: block;
+    background-color: transparent;
     border: 0;
     border-bottom: 1px solid #fff;
-    height: 25px;
+    height: 27px;
+    line-height: 27px;
     width: 100%;
 }
 
+#inputContainer label {
+	color: #a0a0a0;
+    font-size: 13px;
+    margin-top: 15px;
+    display: block;
+}
+
 #inputContainer button {
-    background: transparent;
-    border-radius: 25px 25px;
-    border: 1px solid #fff;
-    font-size: 16px;
-    padding: 1em;
-    margin: 1em auto;
+	background-color: transparent;
+    border: 2px solid #fff;
+    border-radius: 250px;
+    color: #fff;
+    display: block;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin: 20px auto;
+    height: 41px;
     width: 100%;
 }
 
 #inputContainer button:hover {
-    background: #fff;
-    color: #000;
+	cursor: pointer;
+}
+
+.hasAccountText span {
+	font-weight: bold;
+    font-size: 12px;
     cursor: pointer;
-}
-
-#inputContainer .errorMessage {
-    color: #FF0000;
-    display: block;
-    font-size: 18px;
-}
-
-#inputContainer label {
-    display: block;
-    margin-top: 15px;
 }
 
 .hasAccountText {
-    font-weight: bold;
-}
-.hasAccountText span:hover {
-    cursor: pointer;
-    text-decoration: underline;
+	text-align: center;
 }
 
-#registerForm {
-    display: none;
+#registerForm,
+#loginForm {
+	display: none;
 }
 
 #loginText {
-    padding: 3em;
+    padding: 45px;
     display: table-cell;
 }
 
 #loginText h1 {
-    text-align: center;
-    font-size: 50px;
+    color: #07d159;
+    font-size: 60px;
+    font-weight: bold;
 }
 
 #loginText h2 {
-    margin: 2em 0;
+    margin: 35px 0;
+}
+
+#loginText ul {
+    padding: 0;
 }
 
 #loginText li {
-    list-style-type: none;
     font-size: 20px;
+    list-style-type: none;
     padding: 5px 30px;
-    background: url("../images/checkmark.png") no-repeat;
+    background: url(../images/icons/checkmark.png) no-repeat 0 0;
+}
+
+#inputContainer .errorMessage {
+    color: #07d159;
+    font-size: 12px;
+    display: block;
 }
