--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,123 @@
-body {
-    padding: 0;
-    margin: 0;
+html, body {
+	padding: 0;
+	margin: 0;
+	height: 100%;
 }
 
-#nowPlayingBar {
-    display: flex;
-    height: 120px;
-    padding: 15px;
-    box-sizing: border-box;
+* {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+}
+
+body {
+    background-color: #181818;
+    font-size: 14px;
+    min-width: 720px;
 }
 
 #nowPlayingBarContainer {
-    width: 100%;
-    background: #302e2f;
+	width: 100%;
+    background-color: #282828;
     bottom: 0;
     position: fixed;
-    min-width: 600px;
+    min-width: 620px;
 }
 
-#nowPlayingLeft, #nowPlayingRight {
-    width: 30%;
+#nowPlayingBar {
+	display: flex;
+    height: 90px;
+    padding: 16px;
+    box-sizing: border-box;
+}
+
+#nowPlayingLeft,
+#nowPlayingRight {
+	width: 30%;
     min-width: 180px;
 }
 
 #nowPlayingRight {
-    position: relative;
+	position: relative;
     margin-top: 16px;
 }
 
 #nowPlayingCenter {
+	width: 40%;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
 }
 
 #nowPlayingBar .content {
-    width: 100%;
-    height: 50px;
+	width: 100%;
+	height: 57px;
 }
 
 .playerControls .buttons {
-    margin: 0 auto;
+	margin: 0 auto;
     display: table;
 }
 
 .controlButton {
-    background: transparent;
-    vertical-align: middle;
+	background-color: transparent;
     border: none;
+    vertical-align: middle;
 }
 
 .controlButton img {
-    width: 20px;
+	width: 20px;
     height: 20px;
 }
 
 .controlButton.play img,
 .controlButton.pause img {
-    width: 32px;
-    height: 32px;
+	width: 32px;
+	height: 32px;
+}
+
+.controlButton:hover {
+	cursor: pointer;
 }
 
 .progressTime {
-    color: #a0a0a0;
+	color: #a0a0a0;
     font-size: 11px;
     min-width: 40px;
     text-align: center;
 }
 
 .playbackBar {
-    display: flex;
+	display: flex;
 }
 
 .progressBar {
-    width: 100%;
+	width: 100%;
     height: 12px;
     display: inline-flex;
     cursor: pointer;
 }
 
 .progressBarBg {
-    background-color: #404040;
+	background-color: #404040;
     height: 4px;
     width: 100%;
     border-radius: 2px;
 }
 
 .progress {
-    background-color: #a0a0a0;
+	background-color: #a0a0a0;
     height: 4px;
     width: 0;
     border-radius: 2px;
 }
 
 .playbackBar .progressBar {
-    margin-top: 3px;
+	margin-top: 3px;
 }
 
 #nowPlayingLeft .albumArtwork {
-    height: 100%;
+	height: 100%;
     max-width: 57px;
     margin-right: 15px;
     float: left;
@@ -107,37 +125,37 @@ body {
 }
 
 #nowPlayingLeft .trackInfo {
-    display: table;
+	display: table;
 }
 
 #nowPlayingLeft .trackInfo .trackName {
-    margin: 6px 0;
+	margin: 6px 0;
     display: inline-block;
     width: 100%;
 }
 
 #nowPlayingLeft .trackInfo .artistName span {
-    font-size: 12px;
+	font-size: 12px;
     color: #a0a0a0;
 }
 
 .volumeBar {
-    width: 180px;
+	width: 180px;
     position: absolute;
     right: 0;
 }
 
 .volumeBar .progressBar {
-    width: 125px;
+	width: 125px;
 }
 
 #topContainer {
-    min-height: 100%;
-    width: 100%;
+	min-height: 100%;
+	width: 100%;
 }
 
 #navBarContainer {
-    background-color: #000;
+	background-color: #000;
     width: 220px;
     height: 100vh;
     position: fixed;
@@ -179,9 +197,23 @@ body {
     text-decoration: none;
 }
 
+.navItemLink:hover {
+    color: #ffffff;
+}
+
 .navItemLink .icon {
     position: absolute;
     right: 0;
     top: 6px;
     width: 25px;
+}
+
+#mainViewContainer {
+    margin-left: 220px;
+    padding-bottom: 90px;
+    width: calc(100% - 220px);
+}
+
+#mainContent {
+    padding: 0 20px;
 }
